assets/css/coursesystem.css
.global-navbar {
	/* 	box-shadow: 0px 10px 30px rgba(1, 1, 1, 0.4); */
	background: -moz-linear-gradient(top, #41AEA2 0%, #2a8a8f 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #36b0b6),
		color-stop(100%, #2a8a8f));
	background: -webkit-linear-gradient(top, #41AEA2 0%, #2a8a8f 100%);
	background: -o-linear-gradient(top, #41AEA2 0%, #2a8a8f 100%);
	background: -ms-linear-gradient(top, #41AEA2 0%, #2a8a8f 100%);
	background: linear-gradient(top, #41AEA2 0%, #2a8a8f 100%);
	border: 0px;
	border-radius: 0px;
}

.navbar-nav>li>a {
	color: white;
}

/* Horizontal menu*/
.h-menu {
	float: left;
	padding: 0px;
	margin: 0px;
}

.h-menu>li {
	list-style: none;
	float: left;
}

.h-menu>li>a {
	color: white;
	padding: 15px 15px 15px 15px;
}

.course-box {
	cursor: pointer;
	border: 1px #2d2d2d solid;
	border-color: rgba(1, 1, 1, 0.1);
	border-radius: 5px;
	box-shadow: 2px 2px 1px rgba(1, 1, 1, 0.1);
	background-color: white;
	height: 400px;
	width: 23%;
	float: left;
	margin-right: 1%;
	margin-left: 1%;
	margin-bottom: 20px;
	text-align: center;
	padding: 1% 1% 1% 1%;
	position: relative;
}

.course-box h2 {
	text-align: center;
}

.course-box:hover {
	background-color: #efefef
}

.vertical-content-nav-bar {
	padding-left: 0px;
	padding-right: 0px;
	border: 1px #2d2d2d solid;
	border-color: rgba(1, 1, 1, 0.1);
	height: 100%;
}

.vertical-content-nav-bar-scrollable-list {
	overflow: auto;
	height: 70%;
}

.vertical-content-nav-bar-scrollable-list::-webkit-scrollbar {
	width: 12px;
}

.vertical-content-nav-bar-scrollable-list::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
	border-radius: 10px;
}

.vertical-content-nav-bar-scrollable-list::-webkit-scrollbar-thumb {
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}

.vertical-content-nav-bar-title {
	width: 100%;
	padding-left: 20px;
	height: 15%;
	border-bottom: 2px #000000 solid;
}

.vertical-content-nav-bar-course-title-text {
	cursor: pointer;
	color: gray;
}

.vertical-content-nav-bar-course-title-text:hover {
	color: #978FBA;
	text-decoration: none;
}

.vertical-side-bar-item-center-wrapper {
	display: table-cell;
	vertical-align: middle;
	width: 100%;
	height: 100%;
}

.vertical-side-bar-item-text {
	padding-left: 40px;
}

.vertical-side-bar-item:hover {
	background-color: rgba(149, 206, 100, .9);
	color: #FFFFFF;
}

.vertical-side-bar-middle-box .selected {
	background-color: rgba(149, 206, 100, .9);
}

.vertical-side-bar-middle-box .selected:hover {
	color: #FFFFFF;
}


.vertical-side-bar-item {
	width: 100%;
	transition: background-color 0.1s linear, color 0.1s linear;
	cursor: pointer;
	border-bottom: 1px #2d2d2d solid;
	border-color: rgba(1, 1, 1, 0.1);
	min-height: 60px;
	display: table;
}

.vertical-content-nav-bar-item {
	max-width: 600px;
	position: relative;
	background-color: white;
	height: 80px;
	margin: 15px auto 15px auto;
	transition: background-color 0.1s linear;
	border-bottom: 1px #2d2d2d solid;
	border-color: rgba(1, 1, 1, 0.1);
	min-height: 55px;
	padding-top: 20px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	-webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
	-moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.vertical-content-nav-bar-item a {
	position: absolute;
	height: 100%;
	width: 100%;
}

.vertical-content-nav-bar-title-text {
	font-weight: 900;
	font-size: 20px;
	letter-spacing: 3px;
}

.vertical-content-nav-bar-item-text {
	font-size: 25px;
	vertical-align: middle;
	color: #757575;
}

.vertical-side-bar-item-icon {
	display: inline-block;
	vertical-align: middle;
	margin-left: 20px;
}

.vertical-side-bar-item-icon-text {
	display: inline-block;
	vertical-align: middle;
	width: 70%;
	padding-left: 10px;
}

.vertical-content-nav-bar-next-section-box {
	width: 100%;
	transition: background-color 0.1s linear;
	cursor: pointer;
	border-top: 1px #2d2d2d solid;
	border-color: rgba(1, 1, 1, 0.1);
	position: relative;
	height: 15%;
}

.vertical-content-nav-bar-next-section-box-label {
	width: 100%;
	position: relative;
	padding-left: 20px;
	height: 15%;
	border-top: 2px #000000 solid;
}

.vertical-content-nav-bar-next-section-box-label-text {
	font-weight: 900;
	font-size: 16px;
	margin-top: 20px;
	line-height: 60px;
	letter-spacing: 2px;
	color: #444444;
}

.vertical-content-nav-bar-next-section-box-icon {
	position: absolute;
	top: 20px;
	left: 15px;
}

.vertical-content-nav-bar-next-section-box-text {
	margin-left: 80px;
	line-height: 80px;
	color: #929292;
}

.no-padding-wrapper {
	margin-left: -80px;
	margin-right: -80px;
}

#contentarea {
	width: auto;
	overflow: hidden;
	margin-left: 260px;
}

.vertical-side-bar-container {
	padding-left: 0;
	padding-right: 0;
	padding-top: 100px;
	padding-bottom: 100px;
	width: 260px;
	height: 100vh;
	float: left;
	background-color: green;
	position: relative;
}

.vertical-side-bar-top-box {
	background-color: #F9F9F9;
	border-right: 1px #2d2d2d solid;
	border-bottom: 1px #2d2d2d solid;
	border-color: rgba(1, 1, 1, 0.1);
	width: 100%;
	height: 100px;
	position: absolute;
	top: 0;
	padding: 10px 20px 10px 20px;
	border-color: rgba(1, 1, 1, 0.1);
}

.vertical-side-bar-top-box-title {
	font-size: 20px;
}

.carousel-step {
	width: 100%;
	background-color: white;
}

.carousel-step-info {
	width: 100%;
	height: 100px;
	overflow: hidden;
	text-align: center;
	border-left: 1px #2d2d2d solid;
	border-right: 1px #2d2d2d solid;
	border-color: rgba(1, 1, 1, 0.1);
}

.carousel-step-video {
	width: 100%;
}

#carousel-wrapper {
	width: 100%;
}

.search-box-wrapper {
	float: right;
	width: 76%;
	font-size: 15px;
}

.search-box-wrapper form {
	position: relative;
}

.search-box-wrapper form span {
	position: absolute;
	left: 10px;
	top: 11px;
}

.search-form {
	padding-left: 34px;
}
/* ... */

